<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="最新结果"
            app:titleTextColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_issue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="8dp"
                    android:text="2018年168期"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textview_size_m"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pm1"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:background="@drawable/oval_blue"
                            android:gravity="center"
                            android:text="@string/null_of_1"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pmsx1"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pm2"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:background="@drawable/oval_blue"
                            android:gravity="center"
                            android:text="@string/null_of_2"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pmsx2"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pm3"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:background="@drawable/oval_blue"
                            android:gravity="center"
                            android:text="@string/null_of_3"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pmsx3"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pm4"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:background="@drawable/oval_blue"
                            android:gravity="center"
                            android:text="@string/null_of_4"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pmsx4"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pm5"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:background="@drawable/oval_blue"
                            android:gravity="center"
                            android:text="@string/null_of_5"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pmsx5"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pm6"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:background="@drawable/oval_blue"
                            android:gravity="center"
                            android:text="@string/null_of_6"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pmsx6"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:text="+"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tm"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:background="@drawable/oval_blue"
                            android:gravity="center"
                            android:text="@string/null_of_7"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tmsx"
                            android:layout_width="@dimen/textview_width_m"
                            android:layout_height="@dimen/textview_width_m"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textview_size_m"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:id="@+id/layout_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <ImageView
                            android:id="@+id/iv_left"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:padding="6dp"
                            android:src="@mipmap/left" />

                        <TextView
                            android:id="@+id/tv_ym"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="1 月"
                            android:textColor="@android:color/black"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/iv_right"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_alignParentRight="true"
                            android:padding="6dp"
                            android:src="@mipmap/right" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="4dp"
                        android:background="@android:color/darker_gray" />

                    <GridView
                        android:id="@+id/grid_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:horizontalSpacing="2dp"
                        android:numColumns="7"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="2dp" />
                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
